--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -9,6 +9,6 @@
     "style": "scss",
     "testFramework": "jasmine",
     "testScript": "coffee",
-    "lastUsedModule": "modules/meet"
+    "lastUsedModule": "modules/layout"
   }
 }
