--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-ui-router": "~0.2.10",
     "bourbon": "~4.2.2",
     "bootstrap": "~3.3.4",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "twitter": "~3.3.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.*"
